# lidar_perception

./: CMakeLists.txt  LOG_OPTIMIZATION.md  LOG_QUICK_REF.md  PYTHON_CPP_SYNC.md  README.md  build.sh  clean.sh  package.xml  run.sh  stop.sh
calibration/: front_left.yaml  front_right.yaml  left.yaml  rear.yaml  right.yaml
config/: fusion_config.yaml  log_config.conf
docs/: 3D_BBOX_IMPROVEMENTS.md  LIDAR_HEIGHT_FILTERING.md
include/fusion_cpp/: detector_tensorrt.hpp  fusion_perception_node.hpp  livox_parser.hpp  sensor_fusion.hpp  tracker.hpp
launch/: fusion_perception.launch.py
models/: README.md
scripts/: compare_outputs.py  diagnose_position.py  print_obstacles.py
src/: detector_tensorrt.cpp  fusion_perception_node.cpp  livox_parser.cpp  sensor_fusion.cpp  tracker.cpp
